--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0"
+        "illuminate/support": "^10.0",
+        "phpdocumentor/reflection-docblock": "^5.5",
+        "phpdocumentor/reflection": "^6.0"
     },
     "require-dev" : {
         "fakerphp/faker": "^1.14",
