--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "serialize",
         "php-mapper"
     ],
-    "homepage" : "https://github.com/Asrtal/php-serialize",
+    "homepage" : "https://github.com/astral-data/php-serialize",
     "license" : "MIT",
     "authors" : [
         {
@@ -23,7 +23,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0"
+        "illuminate/support": "^10.0",
+        "phpdocumentor/reflection-docblock": "^5.5"
     },
     "require-dev" : {
         "fakerphp/faker": "^1.14",
