--- a/composer.json
+++ b/composer.json
@@ -24,24 +24,26 @@
     "require": {
         "php": "^8.1",
         "illuminate/support": "^10.0",
-<<<<<<< HEAD
         "phpdocumentor/reflection-docblock": "^5.5",
         "phpdocumentor/reflection": "^6.0"
-=======
-        "phpdocumentor/reflection-docblock": "^5.5"
->>>>>>> 6af8e3a436675df3f65f507f4e1222a71c995b30
     },
     "require-dev" : {
         "fakerphp/faker": "^1.14",
         "friendsofphp/php-cs-fixer": "^3.0",
         "mockery/mockery": "^1.6",
         "phpbench/phpbench": "^1.2",
-        "phpunit/phpunit": "^10.0"
+        "phpunit/phpunit": "^10.0",
+        "pestphp/pest": "^2.30"
     },
     "autoload": {
         "psr-4": {
             "Astral\\Serialize\\": "src/",
             "Astral\\Serialize\\Tests\\": "tests/"
+        }
+    },
+    "config": {
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
         }
     }
 }
