--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
         "php": "^8.1",
         "illuminate/support": "^10.0",
         "phpdocumentor/reflection-docblock": "^5.5",
-        "phpdocumentor/reflection": "^6.0"
+        "phpdocumentor/reflection": "^6.0",
+        "psr/simple-cache": "^3.0"
     },
     "require-dev" : {
         "fakerphp/faker": "^1.14",
