--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,6 @@
             "role" : "Developer"
         }
     ],
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://mirrors.aliyun.com/composer/"
-        }
-    ],
     "require": {
         "php": "^8.1",
         "illuminate/support": "^10.0",
@@ -30,6 +24,7 @@
     },
     "require-dev" : {
         "fakerphp/faker": "^1.14",
+        "phpstan/phpstan": "^2.0.2",
         "friendsofphp/php-cs-fixer": "^3.0",
         "mockery/mockery": "^1.6",
         "phpbench/phpbench": "^1.2",
