--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,5 +1,8 @@
 parameters:
     level: 5
+    mockery:
+        class: DataCollection
+        mockClass: Mockery\MockInterface
     treatPhpDocTypesAsCertain: false
     paths:
         - src
@@ -7,3 +10,4 @@ parameters:
     bootstrapFiles:
         - vendor/autoload.php
     ignoreErrors:
+
