--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/support": "^10.0",
+        "illuminate/support": "^6.0||^7.0||^8.0||^9.0||^10.0||^11.0||^12.0",
         "phpdocumentor/reflection-docblock": "^5.5",
         "phpdocumentor/reflection": "^6.0",
         "fakerphp/faker": "^1.23",
