composer add description

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "astral/php-serialize",
+    "description": "An advanced PHP serialization tool leveraging attributes for flexible object-to-array and JSON conversion. Supports property aliases, type conversions, and nested object handling. Ideal for APIs, data persistence, and configuration management.",
     "type": "library",
     "keywords" : [
         "php-serialize",
