--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,9 @@
     "config": {
         "allow-plugins": {
             "pestphp/pest-plugin": true
+        },
+        "platform": {
+            "php": "8.1.32"
         }
     }
 }
