--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "phpdocumentor/reflection-docblock": "^5.5",
         "phpdocumentor/reflection": "^6.0",
         "fakerphp/faker": "^1.23",
-        "psr/simple-cache": "^3.0"
+        "psr/simple-cache": "^3.0",
+        "symfony/console": "^6.4"
     },
     "require-dev" : {
         "phpstan/phpstan": "^2.0.2",
@@ -41,6 +42,9 @@
     "config": {
         "allow-plugins": {
             "pestphp/pest-plugin": true
+        },
+        "platform": {
+            "php": "8.1.32"
         }
     }
 }
